CI: Fix build with gcc14

--- a/lib/src/CMakeLists.txt
+++ b/lib/src/CMakeLists.txt
@@ -33,7 +33,7 @@ if (Bonmin_FOUND)
     if (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 7)
       set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter")
     else ()
-      set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=implicit-fallthrough")
+      set_source_files_properties (Base/Optim/Bonmin.cxx Base/Optim/BonminProblem.cxx PROPERTIES COMPILE_FLAGS "-Wno-error=unused-parameter -Wno-error=implicit-fallthrough -Wno-error=overloaded-virtual")
     endif ()
   endif ()
 endif ()
