Improve unit tests of Halton sequence

--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -227,7 +227,7 @@ ot_check_test (ProcessSample_std)
 ot_check_test (RandomGenerator_std)
 ot_check_test (SobolSequence_std)
 ot_check_test (FaureSequence_std)
-ot_check_test (HaltonSequence_std)
+ot_check_test (HaltonSequence_std IGNOREOUT)
 ot_check_test (HaselgroveSequence_std)
 ot_check_test (ReverseHaltonSequence_std)
 ot_check_test (CorrelationAnalysis_std IGNOREOUT)
