--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -219,7 +219,7 @@ ot_pyinstallcheck_test (ProcessSample_std)
 ot_pyinstallcheck_test (RandomGenerator_std)
 ot_pyinstallcheck_test (SobolSequence_std)
 ot_pyinstallcheck_test (FaureSequence_std)
-ot_pyinstallcheck_test (HaltonSequence_std)
+ot_pyinstallcheck_test (HaltonSequence_std IGNOREOUT)
 ot_pyinstallcheck_test (HaselgroveSequence_std)
 ot_pyinstallcheck_test (ReverseHaltonSequence_std)
 ot_pyinstallcheck_test (TestResult_std)
