--- a/python/test/CMakeLists.txt
+++ b/python/test/CMakeLists.txt
@@ -217,7 +217,7 @@ ot_pyinstallcheck_test (CorrelationAnalysis_std IGNOREOUT)
 ot_pyinstallcheck_test (Field_draw)
 ot_pyinstallcheck_test (ProcessSample_std)
 ot_pyinstallcheck_test (RandomGenerator_std)
-ot_pyinstallcheck_test (SobolSequence_std)
+ot_pyinstallcheck_test (SobolSequence_std IGNOREOUT)
 ot_pyinstallcheck_test (FaureSequence_std)
 ot_pyinstallcheck_test (HaltonSequence_std IGNOREOUT)
 ot_pyinstallcheck_test (HaselgroveSequence_std)
