--- a/lib/test/CMakeLists.txt
+++ b/lib/test/CMakeLists.txt
@@ -226,7 +226,7 @@ ot_check_test (Field_std)
 ot_check_test (ProcessSample_std)
 ot_check_test (RandomGenerator_std)
 ot_check_test (SobolSequence_std IGNOREOUT)
-ot_check_test (FaureSequence_std)
+ot_check_test (FaureSequence_std IGNOREOUT)
 ot_check_test (HaltonSequence_std IGNOREOUT)
 ot_check_test (HaselgroveSequence_std)
 ot_check_test (ReverseHaltonSequence_std)
