--- a/python/src/GaussProductExperiment_doc.i.in
+++ b/python/src/GaussProductExperiment_doc.i.in
@@ -11,8 +11,8 @@ Available constructors:
 Parameters
 ----------
 marginalSizes : sequence of positive int
-    Numbers of points :math:`s_j` for each direction. Then, the total number of
-    points generated is :math:`\textrm{card}(I)=\prod_{j = 1}^{d_x} s_j`. 
+    Numbers of nodes :math:`s_j` for each direction. Then, the total number of
+    nodes generated is :math:`\textrm{card}(I)=\prod_{j = 1}^{d_x} s_j`. 
     By default, the value of :math:`s_j` is equal to :math:`5`.
     The default marginal size is defined in the 
     `GaussProductExperiment-DefaultMarginalSize` key of the :class:`~openturns.ResourceMap`. 
@@ -22,19 +22,48 @@ distribution :
 Notes
 -----
 The Gauss product experiment is a tensor product experiment
-which uses Gauss points in each direction. 
+which uses Gauss nodes in each direction. 
 Using the notations of the :class:`~openturns.TensorProductExperiment`
-documentation, we have :math:`n_e = d_x` and :math:`d_j=1`
-for every index :math:`j = 1, ..., n_e`.
+documentation, the number of marginal experiments is equal
+to :math:`n_e = d_x` and the dimension of each marginal experiment is
+:math:`d_j=1` for every index :math:`j = 1, ..., n_e`.
 
 For each marginal, the algorithm computes the family of orthogonal 
 polynomials depending on the marginal distribution using the
 :class:`~openturns.StandardDistributionPolynomialFactory` class. 
-The input distribution must have an independent copula.  
+The input distribution must have an independent copula.
+
+The :class:`~openturns.GaussLegendre` class provides a simple algorithm
+to use Gaussian quadrature with Legendre polynomials.
+
+**Polynomial exactness**
+
+The Gauss tensor product quadrature rule is exact for polynomials
+up to some degree.
+More precisely, for any :math:`m_i \in \Nset`, let :math:`\mathcal{P}_{m_i}^{(1)}`
+be the set of mono-variable polynomials of degree lower or equal to :math:`m_i`.
+Consider the tensor product of 1D polynomials:
+
+.. math::
+
+    \bigotimes_{i = 1}^\inputDim \mathcal{P}_{m_i}^{(1)}
+    = 
+    \left\{
+    (x_1, ..., x_\inputDim)\in\Rset^\inputDim
+    \rightarrow \prod_{i = 1}^\inputDim p_i(x_i) \in \Rset, \quad 
+    p_i \in \mathcal{P}_{m_i}^{(1)}
+    \right\}.
+
+Therefore the Gauss-Legendre tensorized quadrature is exact for all
+polynomials of the vector space:
+
+.. math::
+
+    \bigotimes_{i = 1}^\inputDim \mathcal{P}_{2 s_i - 1}^{(1)}.
 
 See also
 --------
-WeightedExperiment, TensorProductExperiment
+WeightedExperiment, TensorProductExperiment, GaussLegendre
 
 Examples
 --------
