Sphinx: Enable copybutton extension
Closes #2674

--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -68,6 +68,9 @@ imgmath_embed = True
 extensions.append('matplotlib.sphinxext.plot_directive')
 plot_formats = ['png']
 
+extensions.append('sphinx_copybutton')
+copybutton_prompt_text = ">>> "
+
 extensions.append('sphinx_gallery.gen_gallery')
 sphinx_gallery_conf = {
 
