--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -14,6 +14,18 @@ import sys
 import os
 import subprocess
 from sphinx_gallery.sorting import ExplicitOrder
+import sphinx_gallery
+
+try:
+    from packaging.version import Version
+except ImportError:
+    from pkg_resources import parse_version as Version
+
+try:
+    import joblib
+    have_joblib = True
+except ImportError:
+    have_joblib = False
 
 # If extensions (or modules to document with autodoc) are in another directory,
 # add these directories to sys.path here. If the directory is relative to the
@@ -126,6 +138,9 @@ sphinx_gallery_conf = {
     # logged nor embedded in the html output
     'min_reported_time': 2,
 }
+
+if Version(sphinx_gallery.__version__) >= Version("0.17.0"):
+    sphinx_gallery_conf["parallel"] = have_joblib
 
 # TODO: drop jquery in custom search.html
 extensions.append('sphinxcontrib.jquery')
