Sphinx: Fix copybutton separators
Closes #2706

--- a/python/doc/conf.py.in
+++ b/python/doc/conf.py.in
@@ -81,7 +81,7 @@ extensions.append('matplotlib.sphinxext.plot_directive')
 plot_formats = ['png']
 
 extensions.append('sphinx_copybutton')
-copybutton_prompt_text = ">>> "
+copybutton_exclude = '.linenos, .gp'
 
 extensions.append('sphinx_gallery.gen_gallery')
 sphinx_gallery_conf = {
